--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -17,7 +17,6 @@
         <button type="button" class="close" data-dismiss="modal">&times;</button>
         <h4 class="modal-title"><%= @event.title %></h4>
       </div>
-      <br />
       <div class="modal-body">
         <form method="post" action="#" enctype="multipart/form-data" id="current_event" data-id="<%= @event.id %>">
           <div class="form-group">
@@ -40,6 +39,45 @@
             <label for="user_address">Event Will Be Hosted At Your Address</label>
             <input type="checkbox" id="user_address" name="user_address" />
           </div>
+          <div class="form-group">
+            <label for="guest_limit">Number Of Guests</label>
+            <input type="text" class="form-control" id="guest_limit" value="<%= @event.guest_limit %>" name="guest_limit" />
+          </div>
+          <div class="form-group">
+            <label for="unlimited_guests">No Guest Limit</label>
+            <% if @event.unlimited_guests %>
+              <input type="checkbox" id="unlimited_guests" checked="<%= @event.unlimited_guests %>" name="unlimited_guests" />
+            <% else %>
+              <input type="checkbox" id="unlimited_guests" name="unlimited_guests" />
+            <% end %>
+          </div>
+          <div class="form-group">
+            <label for="allow_children">Children Welcome</label>
+            <% if @event.allow_children %>
+              <input type="checkbox" id="allow_children" checked="checked" name="allow_children" />
+            <% else %>
+              <input type="checkbox" id="allow_children" name="allow_children" />
+            <% end %>
+          </div>
+          <div class="form-group">
+            <label for="alcohol_allowed">Alcohol Welcome</label>
+            <% if @event.alcohol_allowed %>
+            <input type="checkbox" id="alcohol_allowed" checked="checked" name="alcohol_allowed"/>
+            <% else %>
+            <input type="checkbox" id="alcohol_allowed" name="alcohol_allowed"/>
+            <% end %>
+          </div>
+          <div class="form-group">
+            <label for="food">Food/Drink</label>
+            <textarea type="text" id="food" name="food" class="form-control text_input" /><%= @event.food %></textarea>
+          </div>
+          <div class="form-group">
+            <label for="description">Description Of Event</label>
+            <textarea type="text" id="description" class="form-control text_input" name="description"><%= @event.description %></textarea>
+          </div>
+          <br />
+          <h4>Event Address</h4>
+          <hr />
           <div class="form-group">
             <label for="street">Address</label>
             <input type="text" class="form-control" id="streetEvent" value="<%= @event.address&.street %>" name="street"  />
@@ -113,43 +151,6 @@
             <label for="zip">Zip Code</label>
             <input type="text" class="form-control" id="zipEvent" value="<%= @event.address&.zip %>" name="zip"  />
           </div>
-          <div class="form-group">
-            <label for="guest_limit">Number Of Guests</label>
-            <input type="text" class="form-control" id="guest_limit" value="<%= @event.guest_limit %>" name="guest_limit" />
-          </div>
-          <div class="form-group">
-            <label for="unlimited_guests">No Guest Limit</label>
-            <% if @event.unlimited_guests %>
-              <input type="checkbox" id="unlimited_guests" checked="<%= @event.unlimited_guests %>" name="unlimited_guests" />
-            <% else %>
-              <input type="checkbox" id="unlimited_guests" name="unlimited_guests" />
-            <% end %>
-          </div>
-          <div class="form-group">
-            <label for="allow_children">Children Welcome</label>
-            <% if @event.allow_children %>
-              <input type="checkbox" id="allow_children" checked="checked" name="allow_children" />
-            <% else %>
-              <input type="checkbox" id="allow_children" name="allow_children" />
-            <% end %>
-          </div>
-          <div class="form-group">
-            <label for="alcohol_allowed">Alcohol Welcome</label>
-            <% if @event.alcohol_allowed %>
-            <input type="checkbox" id="alcohol_allowed" checked="checked" name="alcohol_allowed"/>
-            <% else %>
-            <input type="checkbox" id="alcohol_allowed" name="alcohol_allowed"/>
-            <% end %>
-          </div>
-          <div class="form-group">
-            <label for="food">Food/Drink</label>
-            <textarea type="text" id="food" name="food" class="form-control text_input" /><%= @event.food %></textarea>
-          </div>
-          <div class="form-group">
-            <label for="description">Description Of Event</label>
-            <textarea type="text" id="description" class="form-control text_input" name="description"><%= @event.description %></textarea>
-          </div>
-          <br />
         </form>
       </div>
       <div class="modal-footer">
@@ -168,7 +169,6 @@
         <button type="button" class="close" data-dismiss="modal">&times;</button>
         <h4 class="modal-title">Join Event</h4>
       </div>
-      <br />
       <div class="modal-body">
         <form method="post" action="#" enctype="multipart/form-data" id="current_event_join" data-id="<%= @event.id %>">
           <div class="form-group">
@@ -179,7 +179,6 @@
             <label for="application_message">Message To Event Creator</label>
             <textarea type="text" id="application_message" class="form-control text_input" name="application_message" placeholder="Describe Guests"></textarea>
           </div>
-          <br />
         </form>
       </div>
       <div class="modal-footer">
