gmaps locates nearby events currently...

--- a/app/views/welcome/test.html.erb
+++ b/app/views/welcome/test.html.erb
@@ -1,5 +1,5 @@
 <div style='width: 800px;'>
-  <div id="map" style='width: 1400px; height: 800px;'></div>
+  <div id="map" style='width: 1400px; height: 500px;'></div>
 </div>
 
 
@@ -10,4 +10,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.15.0/lodash.js"></script>
   <script src='/javascripts/gmaps_google.js'></script>
   <script src="/js/test.js"></script>
+  <!-- <script> markers = handler.addMarkers(<%=raw @hash.to_json %>);</script>
+  <script>  handler.bounds.extendWith(markers); handler.fitMapToBounds()</script> -->
 <% end %>
