--- a/public/css/events/index.scss
+++ b/public/css/events/index.scss
@@ -63,13 +63,13 @@
       flex-direction: row;
       flex: 1;
       .thumbnailContainer {
+        height: 100%;
         flex: 1;
         display: flex;
         align-items: center;
         justify-content: center;
         img {
           height: 100%;
-          width: 100%;
         }
       }
       .nameContainer {
