--- a/public/css/events/index.css
+++ b/public/css/events/index.css
@@ -86,7 +86,7 @@
 }
 
 .eventContainer .descContainer .profileContainer .thumbnailContainer img {
-  height: 100%;
+  width: 100%;
 }
 
 .eventContainer .descContainer .profileContainer .nameContainer {
