--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -14,16 +14,16 @@
         </div>
         <div class="dateFrom">
           <div class="form-group">
-            <input type="text" class="form-control flatpickr" data-date-format="d-m-Y" id="index_date_from" name="index_date_from" placeholder="From" required />
+            <input type="text" class="form-control flatpickr" data-date-format="m-d-Y" id="index_date_from" name="starting_date" placeholder="From" required />
           </div>
         </div>
         <div class="dateTo">
           <div class="form-group">
-            <input type="text" class="form-control flatpickr" data-date-format="d-m-Y" id="index_date_to" name="index_date_to" placeholder="To" required />
+            <input type="text" class="form-control flatpickr" data-date-format="m-d-Y" id="index_date_to" name="ending_date" placeholder="To" required />
           </div>
         </div>
         <div class="buttonContainer">
-          <a><button class="btn" id="submitIndexSearch">Search</button></a>
+          <button type="button" class="btn" id="submitIndexSearch">Search</button>
         </div>
       </div>
     </form>
