--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -9,24 +9,18 @@
   <h1 class="city_name text-center">Indianapolis</h1>
 </div>
 <div class="container">
-  <div class="row">
-    <div id="renderEvents">
-    
-    </div>
+  <div id="renderEvents">
+
   </div>
 </div>
 
 
 <% content_for :scripts do %>
   <script src="/js/flatpickr.min.js"></script>
+  <script src="//maps.google.com/maps/api/js?v=3.23&key=AIzaSyCVaNAId-8BJ8S1fgCLBun7MTbHioICoZU"></script>
+  <script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
+  <script src='//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js' type='text/javascript'></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.15.0/lodash.js"></script>
+  <script src='/javascripts/gmaps_google.js'></script>
   <script src="js/events/eventsIndex.bundle.js"></script>
-  <!-- <script type="text/javascript">
-      $("#event_date").flatpickr();
-      $("#event_time").flatpickr();
-  </script> -->
-  <!-- <script>
-    $(document).ready(function(){
-        $('[data-toggle="tooltip"]').tooltip();
-    });
-  </script> -->
 <% end %>
