--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
                 <% end %>
               </nav>
               <div class="header_profile">
-                <a href="#" alt="Profile Image"><img src="/assets/profileImage.png" class="img-circle header_profile_image" /></a>
+                <a href="/current_user/dashboard" alt="Profile Image"><img src="/assets/profileImage.png" class="img-circle header_profile_image" /></a>
               </div>
             </div>
           </div>
