--- a/public/css/events/index.css
+++ b/public/css/events/index.css
@@ -18,6 +18,11 @@
   text-shadow: 1px 1px 1px black;
 }
 
+#map {
+  width: 100%;
+  height: 400px;
+}
+
 .eventContainer {
   display: flex;
   height: 350px;
