--- a/public/css/events/index.scss
+++ b/public/css/events/index.scss
@@ -15,6 +15,10 @@
     text-shadow: 1px 1px 1px black;
   }
 }
+#map {
+  width: 100%;
+  height: 400px;
+}
 .eventContainer {
   display: flex;
   height: 350px;
