--- a/public/css/header.scss
+++ b/public/css/header.scss
@@ -56,9 +56,15 @@ nav a {
 	opacity: 1;
 	transform: translateY(0px);
 }
+.margin-top {
+  padding-top: 80px;
+}
 header {
   background-color: black;
   height: 80px;
+  position: fixed;
+  width: 100%;
+  z-index: 5;
 }
 .header_img {
   margin-top: 5px;
