--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,35 +42,26 @@
         </div>
       </div>
     </header>
+    <div class="margin-top"></div>
     <%= yield %>
     <footer>
         <img src="/assets/whitesalticon.png" alt="salt" class="footer_logo center-block" />
         <div class="footer_links container">
           <div class="row">
-            <div class="col-xs-6 col-sm-3 social_links text-center">
+            <div class="col-xs-3 social_links text-center">
               <a href="https://www.facebook.com/"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
               <a href="https://twitter.com/"><i class="fa fa-twitter" aria-hidden="true"></i></a>
               <a href="https://www.instagram.com/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
               <a href="https://www.linkedin.com/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
               <a href="https://www.snapchat.com/"><i class="fa fa-snapchat" aria-hidden="true"></i></a>
             </div>
-            <div class="col-xs-6 col-sm-3">
+            <div class="col-xs-3">
               <a href="#about.html"><h5 class="text-center">About Salt</h5></a>
             </div>
-            <div class="hidden-xs visible-sm visible-md visible-lg">
-              <div class="col-xs-6 col-sm-3">
-                <a href="#policies.html"><h5 class="text-center">Policies</h5></a>
-              </div>
-              <div class="col-xs-6 col-sm-3">
-                <a href="#contact.html"><h5 class="text-center">Contact</h5></a>
-              </div>
-            </div>
-          </div>
-          <div class="row visible-xs hidden-sm hidden-md hidden-lg">
-            <div class="col-xs-6">
+            <div class="col-xs-3">
               <a href="#policies.html"><h5 class="text-center">Policies</h5></a>
             </div>
-            <div class="col-xs-6">
+            <div class="col-xs-3">
               <a href="#contact.html"><h5 class="text-center">Contact</h5></a>
             </div>
           </div>
