--- a/public/css/events/index.css
+++ b/public/css/events/index.css
@@ -1,48 +1,32 @@
-.jumbotron {
-  background-image: url("../../assets/Indianapolis.jpg");
-  background-position: center;
-  background-size: cover;
-  height: 300px;
-}
-
-.jumbotron .back_search_btn {
-  position: absolute;
-  color: black;
-  top: 90px;
-  left: 10px;
-}
-
-.jumbotron .city_name {
-  color: white;
-  margin-top: 60px;
-  text-shadow: 1px 1px 1px black;
-}
-
 #map {
+  position: relative;
   width: 100%;
-  height: 400px;
+  height: 50vh;
+}
+
+.content_area {
+  padding-top: 10px;
 }
 
 .eventContainer {
   display: flex;
-  height: 350px;
+  height: 250px;
   flex-direction: column;
   border: solid 1px gray;
   margin-bottom: 30px;
+  background-position: center;
+  background-size: cover;
 }
 
 .eventContainer .imgContainer {
-  background-position: center;
-  background-size: cover;
   flex: 2;
 }
 
 .eventContainer .imgContainer .dateContainer {
-  color: white;
   position: absolute;
   top: 0px;
   left: 15px;
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(255, 255, 255, 0.6);
   display: inline-block;
   padding: 5px;
 }
@@ -71,45 +55,67 @@
 .eventContainer .descContainer {
   flex: 1;
   display: flex;
-  flex-direction: column;
-  padding: 10px;
+  flex-direction: row;
+  padding: 5px;
   margin-top: 5px;
+  background-color: rgba(255, 255, 255, 0.6);
 }
 
 .eventContainer .descContainer .profileContainer {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   flex: 1;
 }
 
 .eventContainer .descContainer .profileContainer .thumbnailContainer {
   height: 100%;
-  flex: 1;
+  flex: 4;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .eventContainer .descContainer .profileContainer .thumbnailContainer img {
-  width: 100%;
+  width: 60px;
 }
 
 .eventContainer .descContainer .profileContainer .nameContainer {
-  flex: 5;
+  flex: 1;
   display: flex;
-  align-items: center;
+  justify-content: center;
 }
 
 .eventContainer .descContainer .profileContainer .nameContainer .event_host {
-  margin: 10px 0 10px 10px;
+  font-size: 12px;
+  margin: 0;
 }
 
 .eventContainer .descContainer .eventDescContainer {
   flex: 2;
-  display: flex;
-  flex-direction: column;
 }
 
 .eventContainer .descContainer .eventDescContainer .event_title {
   margin: 10px 0;
+}
+
+.eventContainer .descContainer .eventDescContainer .event_guests {
+  display: inline-block;
+}
+
+.eventContainer .descContainer .eventDescContainer .event_spots_left {
+  display: inline-block;
+  margin-left: 5px;
+}
+
+@media screen and (min-width: 768px) {
+  #map {
+    position: fixed !important;
+    right: 0px;
+    top: 80px;
+    width: 40%;
+    height: 90vh;
+  }
+  .content_area {
+    padding-top: 20px;
+  }
 }
