--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -20,16 +20,18 @@ footer {
   height: 100%;
   text-align: center;
   padding-bottom: 20px;
+  z-index: 10;
+  position: relative;
 }
 
 footer .footer_logo {
   display: inline-block;
-  width: 200px;
-  margin-top: 20px;
+  width: 100px;
+  margin-top: 6px;
 }
 
 footer .footer_links {
-  margin-top: 20px;
+  margin-top: 4px;
 }
 
 footer .footer_links a {
@@ -43,15 +45,53 @@ footer .footer_links a:hover, footer .footer_links a:focus {
 }
 
 footer .footer_links h5 {
-  font-size: 20px;
+  font-size: 14px;
   margin-bottom: 0px;
 }
 
 footer .social_links {
-  font-size: 20px;
-  margin-top: 8px;
+  font-size: 14px;
+  margin-top: 6px;
 }
 
 footer .social_links a {
   color: white;
+}
+
+@media screen and (min-width: 768px) {
+  footer {
+    background-color: black;
+    height: 100%;
+    text-align: center;
+    padding-bottom: 20px;
+    z-index: 10;
+    position: relative;
+  }
+  footer .footer_logo {
+    display: inline-block;
+    width: 140px;
+    margin-top: 10px;
+  }
+  footer .footer_links {
+    margin-top: 10px;
+  }
+  footer .footer_links a {
+    color: white;
+    text-decoration: none;
+    transition: 0.3s;
+  }
+  footer .footer_links a:hover, footer .footer_links a:focus {
+    color: pink;
+  }
+  footer .footer_links h5 {
+    font-size: 20px;
+    margin-bottom: 0px;
+  }
+  footer .social_links {
+    font-size: 20px;
+    margin-top: 8px;
+  }
+  footer .social_links a {
+    color: white;
+  }
 }
