--- a/public/css/events/index.css
+++ b/public/css/events/index.css
@@ -9,14 +9,24 @@ body {
 }
 
 .filterBox {
+  display: flex;
+  flex-direction: row;
   position: relative;
   background-color: white;
   width: 100%;
-  height: 45px;
+  height: 46px;
 }
 
-.filterBox .guestLimitLabel {
-  margin-left: 10px;
+.filterBox .container1, .filterBox .container2, .filterBox .container3 {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.filterBox .container1 label, .filterBox .container2 label, .filterBox .container3 label {
+  text-align: right;
+  margin: 0;
 }
 
 .content_area {
@@ -26,7 +36,7 @@ body {
 .form-control {
   display: inline-block;
   margin: 5px 10px;
-  width: 10%;
+  width: 50%;
 }
 
 .eventContainer {
@@ -36,6 +46,7 @@ body {
   margin-bottom: 30px;
   background-position: center;
   background-size: cover;
+  cursor: pointer;
 }
 
 .eventContainer .imgContainer {
@@ -52,11 +63,11 @@ body {
 }
 
 .eventContainer .imgContainer .dateContainer .date {
-  font-size: 15px;
+  font-size: 20px;
 }
 
 .eventContainer .imgContainer .dateContainer .time {
-  font-size: 12px;
+  font-size: 16px;
 }
 
 .eventContainer .imgContainer .watchIcon {
@@ -77,7 +88,6 @@ body {
   display: flex;
   flex-direction: row;
   padding: 5px;
-  margin-top: 5px;
   background-color: rgba(255, 255, 255, 0.6);
 }
 
@@ -111,7 +121,7 @@ body {
 }
 
 .eventContainer .descContainer .eventDescContainer {
-  flex: 2;
+  flex: 3;
 }
 
 .eventContainer .descContainer .eventDescContainer .event_title {
