--- a/public/css/events/show.css
+++ b/public/css/events/show.css
@@ -15,11 +15,6 @@
   flex-direction: column;
 }
 
-.mainContainer .headContainer .titleContainer .eventTitle {
-  font-size: 50px;
-  margin: 0;
-}
-
 .mainContainer .headContainer .spotsContainer {
   flex-direction: column;
   flex: 1;
@@ -55,6 +50,7 @@
 
 .mainContainer .highlightsContainer {
   flex: 1;
+  margin: 0;
 }
 
 .slick-prev:before, .slick-next:before {
@@ -106,6 +102,15 @@
   margin: 0;
 }
 
+.profile-text-margin {
+  margin-top: 31px;
+}
+
 .text_input {
-  height: 80px;
+  height: 8 0px;
+}
+
+.eventTitle {
+  font-size: 60px;
+  margin: 0;
 }
