--- a/public/css/events/index.scss
+++ b/public/css/events/index.scss
@@ -6,6 +6,9 @@ body {
   width: 100%;
   height: 50vh;
 }
+#renderEvents {
+  min-height: 100vh;
+}
 .filterBox {
   display: flex;
   flex-direction: row;
