--- a/public/css/events/show.css
+++ b/public/css/events/show.css
@@ -2,10 +2,6 @@
   margin-top: 40px;
 }
 
-#slider {
-  margin-top: 10px;
-}
-
 #slider .slick-slide {
   height: 320px;
 }
@@ -58,10 +54,12 @@
 }
 
 .slick-next {
+  transform: scale(1.3) !important;
   right: 5px !important;
 }
 
 .slick-prev {
+  transform: scale(1.3) !important;
   z-index: 5;
   left: 5px !important;
 }
