--- a/public/css/events/show.scss
+++ b/public/css/events/show.scss
@@ -2,7 +2,6 @@
   margin-top: 40px;
 }
 #slider {
-  margin-top: 10px;
   .slick-slide {
     height: 320px;
   }
@@ -48,9 +47,11 @@
   color: white !important;
 }
 .slick-next {
+  transform: scale(1.3) !important;
   right: 5px !important;
 }
 .slick-prev {
+  transform: scale(1.3) !important;
   z-index: 5;
   left: 5px !important;
 }
