working on react user dashboard

--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -275,6 +275,7 @@
     <script src="/js/flatpickr.min.js"></script>
     <script src="/js/dashboard/dashboard.js"></script>
     <script src="/js/configImages.js"></script>
+    <script src="/js/dashboard/userDashboard.bundle.js"></script>
     <script type="text/javascript">
         $("#date").flatpickr();
         $("#time").flatpickr();
