--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -15,5 +15,5 @@
   <script src='//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js' type='text/javascript'></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.15.0/lodash.js"></script>
   <script src='/javascripts/gmaps_google.js'></script>
-  <script src="js/events/eventsIndex.bundle.js"></script>
+  <script src="js/eventsIndex.bundle.js"></script>
 <% end %>
