--- a/public/css/events/show.scss
+++ b/public/css/events/show.scss
@@ -105,3 +105,17 @@
 .comments-area{
   margin-top: 45px;
 }
+.commentContainer{
+  box-sizing: border-box;
+}
+
+.commentName{
+  display:inline-block;
+  margin: 0;
+}
+
+.commentDateTime{
+  display: inline-block;
+  float: right;
+  margin: 3px 0 0 0;
+}
